Move to using containers for cards

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </style>
 
 <body>
+    <script src="scripts/config.js"></script>
     <script src="scripts/card.js"></script>
     <script src="scripts/hand.js"></script>
     <script src="scripts/game.js"></script>
