--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 <body>
     <script src="scripts/config.js"></script>
     <script src="scripts/card.js"></script>
+    <script src="scripts/deck.js"></script>
     <script src="scripts/hand.js"></script>
+    <script src="scripts/enemy.js"></script>
     <script src="scripts/game.js"></script>
 </body>
 </html>
