Convert Enemy class to Character class and use for player

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="scripts/card.js"></script>
     <script src="scripts/deck.js"></script>
     <script src="scripts/hand.js"></script>
-    <script src="scripts/enemy.js"></script>
+    <script src="scripts/character.js"></script>
     <script src="scripts/game.js"></script>
 </body>
 </html>
