Add button class

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <script src="scripts/config.js"></script>
+    <script src="scripts/button.js"></script>
     <script src="scripts/card.js"></script>
     <script src="scripts/deck.js"></script>
     <script src="scripts/hand.js"></script>
