Create a fight scene

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="scripts/hand.js"></script>
     <script src="scripts/icon.js"></script>
     <script src="scripts/character.js"></script>
+    <script src="scripts/fight.js"></script>
     <script src="scripts/game.js"></script>
 </body>
 </html>
