Add option scene to choose enemy before fighting

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <script src="scripts/config.js"></script>
+    <script src="scripts/utils.js"></script>
     <script src="scripts/button.js"></script>
     <script src="scripts/card.js"></script>
     <script src="scripts/deck.js"></script>
@@ -23,6 +24,7 @@
     <script src="scripts/icon.js"></script>
     <script src="scripts/character.js"></script>
     <script src="scripts/fight.js"></script>
+    <script src="scripts/choice.js"></script>
     <script src="scripts/game.js"></script>
 </body>
 </html>
