--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="scripts/character.js"></script>
     <script src="scripts/fight.js"></script>
     <script src="scripts/choice.js"></script>
+    <script src="scripts/StartScene.js"></script>
     <script src="scripts/game.js"></script>
 </body>
 </html>
