--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <script src="scripts/config.js"></script>
+    <script src="scripts/cardData.js"></script>
     <script src="scripts/utils.js"></script>
     <script src="scripts/button.js"></script>
     <script src="scripts/card.js"></script>
