Enemies level up as you fight them

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 </style>
 
 <body>
-    <script src="scripts/config.js"></script>
-    <script src="scripts/cardData.js"></script>
+    <script src="scripts/data/config.js"></script>
+    <script src="scripts/data/cards.js"></script>
+    <script src="scripts/data/enemies.js"></script>
     <script src="scripts/utils.js"></script>
     <script src="scripts/button.js"></script>
     <script src="scripts/card.js"></script>
