Show enchantment on character

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="scripts/deck.js"></script>
     <script src="scripts/hand.js"></script>
     <script src="scripts/icon.js"></script>
+    <script src="scripts/enchantment.js"></script>
     <script src="scripts/character.js"></script>
     <script src="scripts/fight.js"></script>
     <script src="scripts/choice.js"></script>
