--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     <script src="scripts/enchantment.js"></script>
     <script src="scripts/character.js"></script>
     <script src="scripts/fight.js"></script>
-    <script src="scripts/choice.js"></script>
-    <script src="scripts/StartScene.js"></script>
+    <script src="scripts/scenes/OptionScreen.js"></script>
+    <script src="scripts/scenes/DeckBuilder.js"></script>
+    <script src="scripts/scenes/StartScene.js"></script>
     <script src="scripts/game.js"></script>
 </body>
 </html>
