--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <script src="scripts/hand.js"></script>
     <script src="scripts/enchantment.js"></script>
     <script src="scripts/character.js"></script>
-    <script src="scripts/fight.js"></script>
+    <script src="scripts/scenes/DraggableScene.js"></script>
+    <script src="scripts/scenes/FightScene.js"></script>
     <script src="scripts/scenes/OptionScreen.js"></script>
     <script src="scripts/scenes/DeckBuilder.js"></script>
     <script src="scripts/scenes/StartScene.js"></script>
