--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="scripts/scenes/DraggableScene.js"></script>
     <script src="scripts/scenes/FightScene.js"></script>
     <script src="scripts/scenes/OptionScreen.js"></script>
+    <script src="scripts/scenes/CardGrid.js"></script>
     <script src="scripts/scenes/DeckBuilder.js"></script>
     <script src="scripts/scenes/StartScene.js"></script>
     <script src="scripts/game.js"></script>
